<resources>
    <string name="app_name">Foodie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok_button">Tamam</string>
    <string name="rating_taste">Lezzet</string>
    <string name="rating_service">Servis</string>
    <string name="rating_hygiene">Hijyen</string>
    <string name="rating_comment_hint">Buraya yazın</string>
    <string name="resturant_title">İzmir Sakız Restoran</string>
    <string name="resturant_full_control">%50</string>
    <string name="resturant_total_rating">9.2</string>
    <string name="resturant_detail1">Çocuk Oyun Alanı</string>
    <string name="resturant_detail2">Açık Alan</string>
    <string name="resturant_detail3">Vegan</string>
    <string name="resturant_search">Restorant Ara...</string>
    <string name="menu_title">Menu</string>
    <string name="rest_base_url">https://raw.githubusercontent.com</string>
    <string name="rest_url">"/foodieteam22/mockjson/main/test.json"</string>
    <string name="menu_base_url">https://raw.githubusercontent.com</string>
    <string name="menu_url">/foodieteam22/mockjson/main/Menu.json</string>
    <string name="comment_not_found">Yorum bulunamadı</string>
    <string name="rating_warning_message">Oy alanları boş geçilemez</string>
</resources>