<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">


    <data>

        <variable
            name="viewModel"
            type="com.example.foodieapp.viewmodel.RatingViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_selector"
        tools:context=".view.RatingFragment"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:orientation="vertical"
                android:paddingBottom="24dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/tvRatingRestaurantName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        tools:text="Restaurant Name" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="8dp"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/rating_taste"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textColor="@color/white">

                        </TextView>

                        <RatingBar
                            android:id="@+id/ratingBarTaste"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="3"
                            android:numStars="5"
                            android:padding="16dp"
                            android:theme="@style/RatingBar" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/rating_service"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textColor="@color/white">

                        </TextView>

                        <RatingBar
                            android:id="@+id/ratingBarService"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="3"
                            android:numStars="5"
                            android:padding="16dp"
                            android:theme="@style/RatingBar" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/rating_hygiene"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textColor="@color/white">

                        </TextView>

                        <RatingBar
                            android:id="@+id/ratingBarHygiene"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="3"
                            android:numStars="5"
                            android:padding="16dp"
                            android:theme="@style/RatingBar" />

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/tvRatingCommentText"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="8dp"
                    android:layout_weight="3"
                    android:background="@drawable/edit_text_comment_entry"
                    android:hint="@string/rating_comment_hint"
                    android:inputType="textMultiLine"
                    android:padding="8dp"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/black" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnRatingOk"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_selector"
                    android:text="@string/ok_button"
                    android:textColor="@color/white"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>