<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="restaurantModel"
            type="com.example.foodieapp.model.RestaurantModel" />
    </data>

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/cardbackgroundColour"
        app:cardCornerRadius="8dp"
        android:layout_margin="5dp"
        android:id="@+id/cardview"
        app:cardElevation="3dp"
        app:contentPadding="4dp"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:background="@drawable/resturant_demo_image"
                android:id="@+id/imgItem"
                android:contentDescription="resturant_demo_image"
                />

            <TextView
                android:id="@+id/tvResturantName"
                android:layout_width="261dp"
                android:layout_height="39dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:padding="1dp"
                android:text="@{restaurantModel.name}"
                android:hint="@string/resturant_title"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@+id/imgItem"
                app:layout_constraintTop_toTopOf="parent" />
            <ProgressBar
                android:layout_width="200dp"
                android:layout_height="20dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="5dp"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:id="@+id/progress_bar"
                app:layout_constraintTop_toBottomOf="@+id/tvResturantName"
                app:layout_constraintLeft_toRightOf="@+id/imgItem"
                android:progress="40"
                android:indeterminate="false"
                android:max="100"
                android:background="@drawable/button_selector_v2"
                android:progressBackgroundTint="@color/black"
                android:progressTint = "@color/orange"/>




            <TextView
                android:id="@+id/tvProcessText"
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:text="@string/resturant_full_control"
                app:layout_constraintLeft_toRightOf="@+id/progress_bar"
                app:layout_constraintTop_toBottomOf="@+id/tvResturantName"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:textStyle="bold"
                android:textSize="15sp"
                />


            <TextView
                android:id="@+id/tvRatingScore"
                android:layout_width="41dp"
                android:layout_height="42dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:paddingBottom="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvProcessText"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/cardbackgroundColour"
                android:background="@drawable/rating_selector"
                android:text="@string/resturant_total_rating"
                android:gravity="center"
                android:textSize="15sp"
                />


            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/restItemRecyclerView"
                app:layout_constraintLeft_toRightOf="@+id/imgItem"
                app:layout_constraintTop_toBottomOf="@+id/progress_bar"
              tools:listitem="@layout/restaurant_row_item_layout">

            </androidx.recyclerview.widget.RecyclerView>




        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</layout>


